// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kubernetes event watcher podAddedWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod added: -- name: \\"expectedName\\", type: \\"expectedType\\"",
    "metadata": undefined,
  },
  Object {
    "data": undefined,
    "message": "Updated status record for \\"expectedName\\" to \\"creating\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podDeletedWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod deleted -- name: \\"expectedName\\", type: \\"expectedType\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podReadyWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod ready -- name: \\"expectedName\\", type: \\"expectedType\\"",
    "metadata": undefined,
  },
  Object {
    "data": undefined,
    "message": "Updated status record for \\"expectedName\\" to \\"ready\\"",
    "metadata": undefined,
  },
]
`;
